Use ellipsis to prevent text overflow

--- a/public/styles/app.less
+++ b/public/styles/app.less
@@ -25,8 +25,12 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    max-height: 100%;
     width: 100%;
     padding: 8px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     border-radius: inherit;
     background: rgba(0, 0, 0, 0.5);
